--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@tresjs/cientos": "^5.0.0",
-    "@tresjs/nuxt": "^5.0.1",
+    "@tresjs/cientos": "^5.1.1",
+    "@tresjs/core": "^5.1.1",
+    "@tresjs/nuxt": "^5.1.1",
     "@tresjs/post-processing": "^2.4.0",
+    "@vite-pwa/nuxt": "^1.0.7",
     "nuxt": "^4.1.0",
     "three": "^0.180.0",
     "vue": "^3.5.20",
