pre-final state

--- a/.gitignore
+++ b/.gitignore
@@ -9,17 +9,17 @@
 # # Node dependencies
 # node_modules
 
-# # Logs
-# logs
-# *.log
+# Logs
+logs
+*.log
 
-# # Misc
-# .DS_Store
-# .fleet
-# .idea
+# Misc
+.DS_Store
+.fleet
+.idea
 
-# # Local env files
-# .env
-# .env.*
-# !.env.example
+# Local env files
+.env
+.env.*
+!.env.example
 node_modules
