--- a/package.json
+++ b/package.json
@@ -10,11 +10,17 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@sidebase/nuxt-auth": "^1.1.1",
     "@tresjs/cientos": "^5.1.1",
     "@tresjs/core": "^5.1.1",
     "@tresjs/nuxt": "^5.1.1",
     "@tresjs/post-processing": "^2.4.0",
     "@vite-pwa/nuxt": "^1.0.7",
+    "bcryptjs": "^3.0.3",
+    "cookie": "^1.1.1",
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^7.0.0",
+    "mongoose": "^9.0.0",
     "nuxt": "^4.1.0",
     "three": "^0.180.0",
     "vue": "^3.5.20",
