--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "AI CENTER",
-  "short_name": "AI CENTER",
+  "name": "KUML",
+  "short_name": "KUML",
   "description": "Мир, где технологии становятся продолжением твоего разума.",
   "theme_color": "#ffffff",
   "background_color": "#ffffff",
